--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
         "fs": "^0.0.1-security",
         "path": "^0.12.7",
         "tesseract.js": "^2.1.5",
-        "wdio": "^6.0.1",
+        "wdio": "^6.0.1"
     }
 }
