--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,4 @@ jobs:
           USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
           FILE_WITH_NAMES: ${{ secrets.FILE_WITH_NAMES }}
         run: |
-          npm run wdio -- --user_name="$USER_NAME" --user_password="$USER_PASSWORD" --file_with_names="$FILE_WITH_NAMES"
+          npm run wdio user_name="$USER_NAME" user_password="$USER_PASSWORD" file_with_names="$FILE_WITH_NAMES"
