--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,11 @@ jobs:
         run: npm install
 
       - name: Run WDIO tests
-        env:
-          USER_NAME: ${{ secrets.USER_NAME }}
-          USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
-          FILE_WITH_NAMES: ${{ secrets.FILE_WITH_NAMES }}
-        run: |
-          npm run wdio
+        run: npm run wdio
+
+      - name: Upload Screenshots
+        if: always()  # Upload artifacts even if the previous steps failed
+        uses: actions/upload-artifact@v2
+        with:
+          name: screenshots
+          path: ./screenshots
