--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,21 +14,20 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'
-
-      - name: Create Screenshots Directory
-        run: mkdir -p ./screenshots
+          node-version: '20'  # Set Node.js version to 20
 
       - name: Install dependencies
         run: npm install
 
-      - name: Run WDIO tests
-        run: |
-          npm run wdio || true
+      - name: Run WDIO tests with Allure reporter
+        run: npm run wdio
 
-      - name: Upload Screenshots
-        if: always()
+      - name: Generate Allure Report
+        run: |
+          npx allure generate allure-results --clean -o allure-report
+
+      - name: Upload Allure Report
         uses: actions/upload-artifact@v2
         with:
-          name: screenshots
-          path: ./screenshots
+          name: allure-report
+          path: allure-report
